--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <section>
             <h3>Moringa School</h3>
             <p>Software Development Certificate, 2020</p>
-            <p>20 week full-time program covering HTML, CSS, Boostrap, Javascript, Git, AngularJs, Python, Flask and Django.</p>
+            <p>20 week full-time program covering HTML, CSS, Javascript, AngularJs, Python, Flask and Django.</p>
           </section>
 
           <section>
